# e-library

./: .env.sample  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 064a4317945d_initial_setup.py  1ff8b5683731_initial_setup.py  a503bb6f4988_initial_setup.py  d9717054d8c2_initial_model_schema_setup.py
config/: __init__.py
core/: exception.py
core/auth/: __init__.py  auth.py  security.py
core/db/: __init__.py
models/: __init__.py  book.py  user.py
routers/: book.py  user.py
schema/: __init__.py  book.py  user.py
