[project]
name = "e-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.121.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "ruff>=0.14.6",
    "sqlalchemy>=2.0.44",
    "uuid7>=0.1.0",
    "uvicorn>=0.38.0",
]
